--- a/src/main/resources/static/auctionList.css
+++ b/src/main/resources/static/auctionList.css
@@ -1,6 +1,7 @@
-    body {
+  body {
         background: #f8f9fa;
         font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+        margin: 0;
         color: #495057;
     }
 
