--- a/src/main/resources/templates/auctionList.html
+++ b/src/main/resources/templates/auctionList.html
@@ -7,10 +7,108 @@
     <link href="/common.css" rel="stylesheet"/>
     <link href="/login.css" rel="stylesheet"/>
     <link href="/auctionList.css" rel="stylesheet"/>
-    <script type="text/javascript" th:src="@{/AuctionList.js}"></script>
+    <!--  <script type="text/javascript" th:src="@{/AuctionList.js}"></script>-->
 
 </head>
+<script>
+    "https://code.jquery.com/jquery-3.6.4.min.js"
+    "https://js.stripe.com/v3/"
 
+document.addEventListener("DOMContentLoaded", function() {
+    fetch("/allItemsJson")
+        .then(response => response.json())
+        .then(data => {
+            console.log('Retrieved items:', data);
+            displayAuctionItems(data);
+        })
+        .catch(error => {
+            console.error('Error fetching items:', error);
+        });
+});
+
+function displayAuctionItems(items) {
+    const auctionListDiv = document.getElementById("gallery");
+    auctionListDiv.innerHTML = '';
+
+    const groupedItems = groupItemsByCategory(items);
+
+    for (const category in groupedItems) {
+        const categoryHeader = document.createElement("h2");
+        categoryHeader.textContent = category;
+        auctionListDiv.appendChild(categoryHeader);
+
+        const categoryItems = groupedItems[category];
+        const categoryItemsDiv = document.createElement("div");
+        categoryItemsDiv.classList.add("category-items");
+
+        categoryItems.forEach(item => {
+            const contentDiv = document.createElement("div");
+            contentDiv.classList.add("content");
+
+            if (item.image !== null) {
+                const imageData = atob(item.image);
+                const imageDataUrl = `data:image/jpeg;base64,${imageData}`;
+
+                const imageElement = document.createElement("img");
+                imageElement.src = imageDataUrl;
+                contentDiv.appendChild(imageElement);
+            } else {
+                const noImageElement = document.createElement("p");
+                noImageElement.textContent = "No image available";
+                contentDiv.appendChild(noImageElement);
+            }
+
+            let auctionStatus = "";
+            const currentTime = new Date().getTime();
+            const auctionStartTime = new Date(item.auctionStartTime).getTime();
+            const auctionEndTime = new Date(item.auctionEndTime).getTime();
+
+            if (currentTime < auctionStartTime) {
+                auctionStatus = "Auction not started yet";
+            } else if (currentTime > auctionEndTime) {
+                auctionStatus = "Auction ended";
+            } else {
+                auctionStatus = "Auction ongoing";
+            }
+
+            const buttonsHTML = auctionStatus === "Auction ended"
+                ? '' // No buttons if auction ended
+                : `<button class="buy-1" onclick="buyNow('${item.name}')">Make A Bid</button>
+                   <button class="save" onclick="saveItem('${item.name}')">Save</button>`;
+
+            contentDiv.innerHTML += `
+                <h3>${item.name}</h3>
+                <p>$${item.currentBid}</p>
+                <h6>${item.description}</h6>
+                <p>${auctionStatus}</p>
+                ${buttonsHTML}
+            `;
+
+            categoryItemsDiv.appendChild(contentDiv);
+        });
+
+        auctionListDiv.appendChild(categoryItemsDiv);
+    }
+}
+
+function groupItemsByCategory(items) {
+    const groupedItems = {};
+    items.forEach(item => {
+        if (!groupedItems[item.category]) {
+            groupedItems[item.category] = [];
+        }
+        groupedItems[item.category].push(item);
+    });
+    return groupedItems;
+}
+
+function buyNow(itemName) {
+    const url = `/getItem?name=${encodeURIComponent(itemName)}`;
+    window.location.href = url;
+}
+
+
+</script>
 <body>
 <header>
     <div class="nav">
@@ -31,4 +129,3 @@
 </section>
 </body>
 </html>
-
